[tool.poetry]
name = "feast-experiments"
version = "0.1.0"
description = ""
authors = ["Aditya Dhara <adharacapybara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
feast = "^0.24.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
